# mneme

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.research/: README.md  constraints.md  design-rationale.md  rag-benchmarks-2026.md  rag-sota-2026.md  references.md
.workbuddy/memory/: 2026-07-14.md
docs/: v4-design.md
docs/design/: webserver-mock.html  webserver-prototype.md
docs/research/: 2026-07-20-agent-graph-construction-survey.md
docs/superpowers/plans/: 2026-07-06-mneme-skill-v2.md  2026-07-06-mneme-skill-v2_1.md  2026-07-06-mneme-skill.md  2026-07-11-mneme-search-v2_2.md  2026-07-12-mneme-0.3.0-implementation.md  2026-07-12-mneme-test-strategy.md  2026-07-13-mneme-1.1.0-implementation.md  2026-07-13-mneme-2.0-implementation.md  2026-07-14-mneme-dream-search-contract-alignment.md
docs/superpowers/reports/: 2026-07-12-mneme-0.5.0-bench-results.md  2026-07-12-mneme-1.0-readiness-assessment.md  2026-07-12-mneme-test-coverage-baseline.md  2026-07-23-mneme-l2-threshold-0.90-validation.md
docs/superpowers/specs/: 2026-07-06-mneme-skill-design-v2.md  2026-07-06-mneme-skill-design-v2_1.md  2026-07-06-mneme-skill-design.md  2026-07-11-mneme-search-design-v2_2.md  2026-07-13-mneme-2.0-design.md  2026-07-13-mneme-introduction-redesign.md
introduction/: README.md  index.html
references/: type-vocab.md  workflow-lint.md
reports/: README.md
reports/designs/: 2026-07-20-cross-version-comparison.md  2026-07-21-graph-enrichment-benchmark.md  2026-07-23-hybrid-weight-ablation.md  2026-07-23-hybrid-weight-nested-cv.md  3.2-retrieval-comparison.html
reports/experiments/: 2026-07-15-design01-historical.html  2026-07-15-design01-historical.manifest.json  2026-07-15-design01-historical.results.jsonl  2026-07-15-l1-pilot.html  2026-07-15-l1-pilot.manifest.json  2026-07-15-l1-pilot.results.jsonl  2026-07-20-cross-version-historical.html  2026-07-20-cross-version-historical.manifest.json  2026-07-20-cross-version-historical.results.jsonl  2026-07-20-why-graph-underperforms.md  2026-07-21-graph-ingest-pilot.md  eval_graph_stages.py  graph-enrichment-benchmark.html  graph-enrichment-benchmark.manifest.json  graph-enrichment-benchmark.qrels.jsonl  graph-enrichment-benchmark.results.jsonl  hybrid-weight-ablation-report.md  hybrid-weight-ablation.results.json  hybrid-weight-nested-cv-report.md  hybrid-weight-nested-cv.results.json  prepare_relevance_annotation.py  run_cross_version.py  run_design01_historical.py  run_graph_enrichment_benchmark.py  run_hybrid_weight_ablation.py  run_hybrid_weight_nested_cv.py  run_l1_pilot.py
sample-bundle/: index.md  log.md
sample-bundle/.mneme/: index.db
sample-bundle/concepts/: llm-wiki.md  okf.md
sample-bundle/external-sources/: karpathy-llm-wiki.md
sample-bundle/sources/: karpathy-llm-wiki.md
sample-bundle/topics/: llm-wiki.md
scripts/: bootstrap_dogfood.py  build_zip.py  okflib.py  validate_okf.py
skills/mneme/: SKILL cn.md  SKILL.md
skills/mneme/references/: index-design.md  tag-graph-curation.md  type-vocab.md  wiki-structure.md  workflow-dream.md  workflow-ingest.md  workflow-lint.md  workflow-nightly-dream.md  workflow-query.md  workflow-search.md
skills/mneme/scripts/: indexlib.py  ingest.py  lint.py  mneme  mneme.py  okflib.py  query.py  tools.py  tools_helpers.py  validate_okf.py
skills/mneme/scripts/mneme/: __init__.py  __main__.py  cli.py  config.py  convert.py  dream.py  graphlib.py  indexlib.py  lazy_index.py  okflib.py  toml_writer.py  tools_helpers.py  webserver.py  webui.py
src/mneme/: __init__.py  cli.py  config.py  indexlib.py  okflib.py  tools_helpers.py  validate_okf.py
src/mneme/skill/: SKILL cn.md  SKILL.md
src/mneme/skill/references/: index-design.md  wiki-structure.md  workflow-query.md
tests/: conftest.py  test_agents_smoke.py  test_blackbox_news.py  test_bootstrap_dogfood.py  test_changelog.py  test_cli.py  test_cli_matrix.py  test_config.py  test_contract_migration.py  test_convert.py  test_docs.py  test_dream_readonly.py  test_dream_schedule.py  test_e2e_ingest.py  test_e2e_lint.py  test_e2e_query.py  test_entrypoint.py  test_fts_body.py  test_graph_benchmark.py  test_graphlib.py  test_hybrid_weight_ablation.py  test_hybrid_weight_nested_cv.py  test_indexlib.py  test_install.py  test_integration.py  test_introduction_page.py  test_introduction_rewrite.py  test_l2_optional.py  test_lazy_index.py  test_lint_extends.py  test_okflib.py  test_release_budget.py  test_release_layout.py  test_retrieval_bench.py  test_sample_bundle.py  test_search_candidates.py  test_skill_drift.py  test_skill_text.py  test_toml_writer.py  test_tools.py  (+5 more)
tests/fixtures/: README.md
tests/fixtures/blackbox_news/: 01_tech_quantum.md  02_finance_central_bank.md  03_sports_world_cup.md  04_culture_booker.md  05_health_alzheimer.md  06_intl_space_station.md  07_education_gaokao.md  08_env_arctic_ice.md  09_politics_election.md  10_entertainment_box_office.md
tests/fixtures/broken_link/: a.md
tests/fixtures/e2e_ingest/: source.md
tests/fixtures/e2e_lint/clean_bundle/: index.md  log.md
tests/fixtures/e2e_lint/clean_bundle/concepts/: ok-concepts.md
tests/fixtures/e2e_lint/dirty_bundle/: index.md
tests/fixtures/e2e_query/: index.md  log.md
tests/fixtures/e2e_query/concepts/: alpha.md  beta.md  delta-unrelated.md  gamma.md  quoted-name.md
tests/fixtures/empty_type/: a.md
tests/fixtures/extra_keys/: a.md
tests/fixtures/log_bad_format/: log.md
tests/fixtures/log_out_of_order/: log.md
tests/fixtures/missing_frontmatter/: a.md
tests/fixtures/nested_index_with_fm/sub/: index.md
tests/fixtures/root_index_extra/: index.md
tests/fixtures/root_index_no_okf_version/: index.md
tests/fixtures/type_as_list/concepts/: x.md
tests/fixtures/type_non_string/: bool.md  int.md  null.md
tests/fixtures/type_whitespace/concepts/: x.md
tests/fixtures/unknown_type/: a.md
tests/fixtures/yaml_malformed/: bad_indent.md  multiline_ok.md  unclosed_quote.md  unterminated_flow.md
(+8 files in other folders)
