[project]
name = "mneme"
version = "1.1.0"
requires-python = ">=3.10"
# Zero hard deps as of v1.1.0. The OKF core (lint / init / ingest / query)
# needs only stdlib; L2 deps (sqlite-vec + fastembed) install lazily on
# first `reindex` / `search`. Strict YAML validation opts into PyYAML via
# the `validate` extra (rare — most users don't need it).
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "coverage>=7.5,<8",
]
validate = ["PyYAML>=6.0,<7"]
index = [
    "sqlite-vec>=0.1.9,<0.2",
    "fastembed>=0.8.0,<0.9",
]
toml10 = ["tomli>=2.0,<3"]
all = [
    "sqlite-vec>=0.1.9,<0.2",
    "fastembed>=0.8.0,<0.9",
    "PyYAML>=6.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 默认跳过 network 与 compat 测试。开发者想跑全部时显式 `pytest -m ""`。
# 6 个 marker 对应 6 个测试层,详见 TESTING.md 与
# docs/superpowers/plans/2026-07-12-mneme-test-strategy.md。
addopts = "-m 'not network and not compat'"
markers = [
    "unit: 单函数/单模块的纯逻辑测试,无外部 IO(离线,<1s)",
    "integration: 跨模块组合,仍进程内 + 无网络(离线,1-3s)",
    "e2e: 通过 CLI subprocess 跑完整 bundle 流程(部分离线,5-30s)",
    "release: 发布门禁 — wheel/入口/版本/预算/漂移(离线,3-10s)",
    "docs: 文档冻结规则(离线,<1s)",
    "network: 需要访问 HuggingFace 下载模型(在线,30-90s;默认跳过)",
    "compat: 与 1.0.x wheel 用户的兼容性 smoke(默认跳过,release-prep 手动触发)",
]

[tool.coverage.run]
source = ["skills/mneme/scripts/mneme"]
branch = true
# 跳过 L2 索引中 sqlite-vec 的 C 扩展边界 —— 那是上游代码,不是 mneme 的责任。
omit = ["*/mneme/__main__.py"]

[tool.coverage.report]
# 不设 fail_under —— 观察期,先建立基线(见
# docs/superpowers/reports/2026-07-12-mneme-test-coverage-baseline.md)。
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]